tests/errors/idint_real4.f90
program idint_real
    print *, idint(4.5)
end program
